<resources>
    <string name="app_name">ChopBachket</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_cart">Cart</string>
    <string name="menu_search">Search</string>
    <string name="menu_manage">Settings</string>
    <string name="menu_categories">Category</string>
    <string name="menu_logout">Logout</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_hom">HomActivity</string>
    <string name="title_activity_seller_home">SellerHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_logout">Logout</string>

    <string name="search_activity_name">Search Products</string>
</resources>
