<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/nav_cart"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/nav_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/category"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_manage" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>
</menu>
